turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:12: error: not found: value Couleur
setCouleur(Couleur.RED)
           ^